--- a/src/pages/dashboard/Overview.css
+++ b/src/pages/dashboard/Overview.css
@@ -25,21 +25,18 @@ font-weight: bold;
 .overview {
 display: grid;
 grid-template-columns: repeat(4, 1fr);
-gap: 20px; /* Adjust the space between the boxes */
+gap: 20px; 
 margin-bottom: 20px;
 }
 
 .overview > div {
-background: #ffffff; /* Change to white background */
+background: #ffffff; 
 padding: 20px;
-border-radius: 10px; /* Adjust for more rounded corners if needed */
+border-radius: 10px; 
 box-shadow: 0px 2px 6px 0px; 
 text-align: center;
 }
 
-
-
-  
 .overview > div {
 background: #f4ebfe; 
 padding: 20px;
